2016-11-17  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/55080
	* parser.c (cp_parser_non_integral_constant_expression): Issue a
	pedwarn instead of an error for case NIC_FLOAT.

2016-11-17  Jason Merrill  <jason@redhat.com>

	PR c++/78124 - list-initialization and inherited ctor
	* name-lookup.c (do_class_using_decl): Set CLASSTYPE_NON_AGGREGATE.

	PR c++/78369 - {} as default argument
	* call.c (build_special_member_call): Handle CONSTRUCTOR.

	PR c++/68377
	* parser.c (cp_parser_fold_expression): Check TREE_NO_WARNING.

2016-11-16  Jason Merrill  <jason@redhat.com>

	PR c++/78373
	* decl.c (cp_finish_decl): Don't set TREE_CONSTANT on a reference.
	* typeck2.c (store_init_value): Likewise.

	* decl.c (store_decomp_type, lookup_decomp_type): New.
	(cp_finish_decomp): Call store_decomp_type.
	* semantics.c (finish_decltype_type): Call lookup_decomp_type.
	* cp-tree.h: Declare lookup_decomp_type.

2016-11-15  Jakub Jelinek  <jakub@redhat.com>

	* decl.c (cp_finish_decomp): For DECL_NAMESPACE_SCOPE_P decl,
	set DECL_ASSEMBLER_NAME.
	* parser.c (cp_parser_decomposition_declaration): Likewise
	if returning error_mark_node.
	* mangle.c (mangle_decomp): New function.
	* cp-tree.h (mangle_decomp): New declaration.

2016-11-15  Jason Merrill  <jason@redhat.com>

	PR c++/78358
	* semantics.c (finish_decltype_type): Strip references for a tuple
	decomposition.
	* cp-tree.h (DECL_DECOMPOSITION_P): False for non-variables.

	* decl2.c (decl_maybe_constant_var_p): References qualify.
	* constexpr.c (non_const_var_error): Handle references.
	* init.c (constant_value_1): Always check decl_constant_var_p.
	* cp-gimplify.c (cp_fold_maybe_rvalue): Don't fold references.
	* error.c (dump_decl_name): Split out from dump_decl.

2016-11-14  Jason Merrill  <jason@redhat.com>

	* tree.c (bitfield_p): New.
	* cp-tree.h: Declare it.
	* typeck.c (cxx_sizeof_expr, cxx_alignof_expr)
	(cp_build_addr_expr_1): Use it instead of DECL_C_BIT_FIELD.